package com.tanyde.dto.ActivityDTO;


import lombok.AllArgsConstructor;
import lombok.Builder;
import lombok.Data;
import lombok.NoArgsConstructor;

import java.io.Serializable;
import java.util.List;

@Data
@Builder
@NoArgsConstructor
@AllArgsConstructor
public class ActivityPlanDTO implements Serializable {
    private static final long serialVersionUID = 1L; // 修复序列化ID缺失

    private Long id;  // 添加这个字段，用于更新操作

    private String planName;

    private Integer minAge;

    private Integer maxAge;

    private String activityCategory;

    private Integer season;

    private Integer duration;

    private Integer scene;

    private Integer status;

    private ActivityPlanContentDTO content;

    private List<ActivityStepDTO> steps;

}
